[gd_scene load_steps=8 format=2]

[ext_resource path="res://Hurtboxes + HitBoxes/softColition.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hurtboxes + HitBoxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hurtboxes + HitBoxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/wanderControler.tscn" type="PackedScene" id=5]
[ext_resource path="res://General/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/ShooterEnemy.gd" type="Script" id=7]

[node name="ShooterEnemy" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 385
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Sombra" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.278431 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 64
collision_mask = 12

[node name="softColition" parent="." instance=ExtResource( 1 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="wanderControler" parent="." instance=ExtResource( 5 )]

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootSound" type="AudioStreamPlayer" parent="."]

[node name="HurtAnim" type="AnimationPlayer" parent="."]

[node name="HurtSound" type="AudioStreamPlayer" parent="."]

[node name="AttackorRunTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="softColition"]

[editable path="PlayerDetectionZone"]
